[package]
name = "prcx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prc-rs = "1.3"
thiserror = "1.0.30"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"